fix spacing on paragraphs and lists, smaller bullet for unordered lists, fix position of logo, different link color on youth program pages, pull 500 weight of Rubik font

--- a/web/app/themes/cfs/assets/styles/common/_typography.scss
+++ b/web/app/themes/cfs/assets/styles/common/_typography.scss
@@ -52,12 +52,6 @@ h4,
   line-height: 1.5;
 }
 
-figcaption,
-p {
-  @extend %smooth;
-  letter-spacing: .06875em;
-}
-
 .p-intro,
 p.p-intro {
   @extend %smooth;
