--- a/web/app/themes/cfs/assets/styles/common/_variables.scss
+++ b/web/app/themes/cfs/assets/styles/common/_variables.scss
@@ -7,10 +7,6 @@ $gray-lite: #F0F0F0;
 $yellow: #E1C83C;
 $red: #EB2332;
 
-// Brand Swatches
-$brand-primary: $brown;
-$brand-secondary: $yellow;
-
 // Breakpoints
 $breakpoint-sm: 480px;
 $breakpoint-md: 768px;
