--- a/web/app/themes/cfs/assets/styles/components/_buttons.scss
+++ b/web/app/themes/cfs/assets/styles/components/_buttons.scss
@@ -47,6 +47,7 @@
   @include media-md {
     &:hover {
       color: $white;
+      text-decoration: none;
       &::before {
         transform: scaleX(1);
       }
