--- a/web/app/themes/cfs/assets/styles/components/_nav.scss
+++ b/web/app/themes/cfs/assets/styles/components/_nav.scss
@@ -63,7 +63,7 @@
     .brand {
       margin-top: 9px;
       font-size: 24px;
-      top: 32px;
+      top: 22px;
       left: calc(#{columns(1)} - 52px);
       z-index: 10;
       svg {
@@ -104,7 +104,6 @@
   a {
     @include theme-color('color', $black, 'accent');
     display: block;
-    text-decoration: none;
     padding: grid(3) 0;
     line-height: 24px;
   }
