--- a/web/app/themes/cfs/assets/styles/pages/_programs.scss
+++ b/web/app/themes/cfs/assets/styles/pages/_programs.scss
@@ -23,6 +23,12 @@ body.theme-yellow {
     box-shadow: inset 0px 0px 0px 2px $black;
   }
 
+  .user-content {
+    a {
+      color: $brown;
+    }
+  }
+
   @include media-nav {
     .site-nav {
       .nav-search .search-form .go-button,
